--- a/assets/styling/main.css
+++ b/assets/styling/main.css
@@ -1,42 +1,55 @@
 body {
-    background-color: #0f1116;
-    color: #ffffff;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 20px;
+  background-color: #0f1116;
+  color: #ffffff;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 20px;
 }
 
 #hero {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #links {
-    width: 400px;
-    text-align: left;
-    font-size: x-large;
-    color: white;
-    display: flex;
-    flex-direction: column;
+  width: 400px;
+  text-align: left;
+  font-size: x-large;
+  color: white;
+  display: flex;
+  flex-direction: column;
 }
 
 #links a {
-    color: white;
-    text-decoration: none;
-    margin-top: 20px;
-    margin: 10px 0px;
-    border: white 1px solid;
-    border-radius: 5px;
-    padding: 10px;
+  color: white;
+  text-decoration: none;
+  margin-top: 20px;
+  margin: 10px 0px;
+  border: white 1px solid;
+  border-radius: 5px;
+  padding: 10px;
 }
 
 #links a:hover {
-    background-color: #1f1f1f;
-    cursor: pointer;
+  background-color: #1f1f1f;
+  cursor: pointer;
 }
 
 #header {
-    max-width: 1200px;
+  max-width: 1200px;
+}
+
+#keys {
+  display: flex;
+  justify-content: ;
+}
+
+.key {
+  border-style: solid;
+  border-width: 1px;
+  border-color: white;
+  width: 100px;
+  height: 500px;
 }
