add some color to active keys

--- a/assets/styling/main.css
+++ b/assets/styling/main.css
@@ -61,6 +61,10 @@ body {
   border-color: var(--shadow-deep);
 }
 
+.key.active {
+  background-color: blue;
+}
+
 .key p {
   text-align: center;
   color: black;
